# rust-mcp-agent-kit

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md
.mcp-agent/: config.example.toml  config.toml
crates/mcp-agent/: Cargo.toml
crates/mcp-agent-cli/: Cargo.toml
crates/mcp-agent-cli/src/: app.rs  config.rs  event.rs  input.rs  llm.rs  main.rs  state.rs  tools.rs  ui.rs
crates/mcp-agent-cli/src/ui/: chat_area.rs  input_bar.rs  mod.rs  popups.rs  sidebar.rs  status_bar.rs  title_bar.rs  tool_card.rs
crates/mcp-agent/src/: config.rs  main.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/examples/: test_mock.rs  test_multi_turn.rs  test_multi_turn_real.rs  test_orchestrator.rs  test_weather.rs
crates/mcp-client/src/: client.rs  lib.rs  orchestrator.rs  profile.rs  server_process.rs  skill.rs
crates/mcp-client/src/providers/: mock.rs  mod.rs  ollama.rs  openai.rs
crates/mcp-client/src/providers/__mock__/: mock.rs  mod.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: command.rs  constants.rs  dispatcher.rs  lib.rs  server.rs  tool.rs  types.rs
crates/mcp-core/src/commands/: initialize.rs  mod.rs  tools_call.rs  tools_list.rs
crates/mcp-servers/mcp-weather/: Cargo.toml
crates/mcp-tools/tool-filesystem/: Cargo.toml
crates/mcp-tools/tool-filesystem/src/: main.rs  validation.rs
crates/mcp-tools/tool-filesystem/tests/: validation.rs
crates/mcp-tools/tool-shell/: Cargo.toml
crates/mcp-tools/tool-system/: Cargo.toml
crates/mcp-tools/tool-utilities/: Cargo.toml
crates/mcp-tools/tool-weather/: Cargo.toml
crates/mcp-tools/tool-weather/src/: main.rs
crates/mcp-tools/tool-web/: Cargo.toml
docs/: FEATURES.md  ROADMAP.md  TUI.md
profiles/: README.md  coding.toml  data.toml  devops.toml  personal.toml
skills/: README.md  coding.toml  data.toml  devops.md  devops.toml  init-web-project.md  personal.toml
tests/.mcp-agent/: config.example.toml  config.toml
tests/skills/: README.md  coding.md  data.md  init-web-project.md  personal.md
(+8 files in other folders)
