[workspace]
resolver = "2"
members = [
    "crates/mcp-core",
    "crates/mcp-client",
    "crates/mcp-agent-cli",
    "crates/mcp-tools/tool-weather",
    "crates/mcp-tools/tool-filesystem",
    "crates/mcp-tools/tool-system",
    "crates/mcp-tools/tool-web",
    "crates/mcp-tools/tool-utilities",
    "crates/mcp-tools/tool-shell",
    "crates/mcp-agent",
]
