[package]
name = "mcp-agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-client = { path = "../mcp-client" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
glob = "0.3"
unicode-width = "0.1"