[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minreq = { version = "2.12", features = ["https"] }
toml = "0.8"

[[example]]
name = "test_weather"
path = "examples/test_weather.rs"

[[example]]
name = "test_mock"
path = "examples/test_mock.rs"

[[example]]
name = "test_orchestrator"
path = "examples/test_orchestrator.rs"

[[example]]
name = "test_multi_turn"
path = "examples/test_multi_turn.rs"

[[example]]
name = "test_multi_turn_real"
path = "examples/test_multi_turn_real.rs"